Sitewide: Add hotjar, fix animations on mobile, format code and add the missing lottie animation in hero section

--- a/src/assets/scss/abstracts/_mixins.scss
+++ b/src/assets/scss/abstracts/_mixins.scss
@@ -16,6 +16,8 @@
 	position: relative;
 	
 	&:before {
+		clip-path: inset(0 100% 0 0);
+		overflow: hidden;
 		color: #FFF;
 		content: attr(data-context);
 		position: absolute;
